--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/Smarthome-Webshop-Assistant/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smarthome-Webshop Assistant</title>
+    <title>Smarthome Webshop Assistant</title>
     
   <script type="module" crossorigin src="/Smarthome-Webshop-Assistant/assets/index.14c5bf8e.js"></script>
   <link rel="stylesheet" href="/Smarthome-Webshop-Assistant/assets/index.81bc6aea.css">
