--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/Smarthome-Webshop-Assistant/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#FC0000">
     <title>Smarthome Webshop Assistant</title>
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,100..700,0,-50..200" />
-  <script type="module" crossorigin src="/Smarthome-Webshop-Assistant/assets/index.d9681569.js"></script>
-  <link rel="stylesheet" href="/Smarthome-Webshop-Assistant/assets/index.b6e3fe27.css">
+  <script type="module" crossorigin src="/Smarthome-Webshop-Assistant/assets/index.627d4ff9.js"></script>
+  <link rel="stylesheet" href="/Smarthome-Webshop-Assistant/assets/index.827ad94e.css">
 </head>
 <body>
     <div id="app"></div>
